force-app/main/default/objects/Dummy35__c/Dummy35__c.object-meta.xml
<CustomObject>
    <label>Dummy35</label>
    <nameField>
        <label>Dummy35 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy35</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>