force-app/main/default/objects/Dummy35__c/fields/FooBar044__c.field-meta.xml
<CustomField>
    <fullName>FooBar044__c</fullName>
    <label>FooBar044</label>
    <length>255</length>
    <type>Text</type>
</CustomField>