force-app/main/default/objects/Dummy35__c/fields/FooBar073__c.field-meta.xml
<CustomField>
    <fullName>FooBar073__c</fullName>
    <label>FooBar073</label>
    <length>255</length>
    <type>Text</type>
</CustomField>