force-app/main/default/objects/Dummy35__c/fields/FooBar096__c.field-meta.xml
<CustomField>
    <fullName>FooBar096__c</fullName>
    <label>FooBar096</label>
    <length>255</length>
    <type>Text</type>
</CustomField>